// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<anchor> demo: render [affix] correctly 1`] = `
"<div>
  <!--v-if-->
  <div class=\\"\\">
    <div class=\\"mb-anchor\\">
      <div class=\\"mb-anchor-line-slider\\"></div>
      <ul class=\\"mb-anchor-list\\">
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#basic\\">Basic</a>
          <!--v-if-->
        </li>
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#line-less\\">LineLess Mode</a>
          <!--v-if-->
        </li>
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#affix\\"> Affix </a>
          <ul class=\\"mb-anchor-sublist\\">
            <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#boundary\\">Scroll Boundary</a>
              <!--v-if-->
            </li>
            <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#hash\\">Hash mode</a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>"
`;

exports[`<anchor> demo: render [basic] correctly 1`] = `
"<div class=\\"mb-anchor\\">
  <div class=\\"mb-anchor-line-slider\\"></div>
  <ul class=\\"mb-anchor-list\\">
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#basic\\">Basic</a>
      <!--v-if-->
    </li>
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#line-less\\">LineLess Mode</a>
      <!--v-if-->
    </li>
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#affix\\"> Affix </a>
      <ul class=\\"mb-anchor-sublist\\">
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#boundary\\">Scroll Boundary</a>
          <!--v-if-->
        </li>
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#hash\\">Hash mode</a>
          <!--v-if-->
        </li>
      </ul>
    </li>
  </ul>
</div>"
`;

exports[`<anchor> demo: render [boundary] correctly 1`] = `
"<div class=\\"mb-anchor\\">
  <div class=\\"mb-anchor-line-slider\\"></div>
  <ul class=\\"mb-anchor-list\\">
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#basic\\">Basic</a>
      <!--v-if-->
    </li>
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#line-less\\">LineLess Mode</a>
      <!--v-if-->
    </li>
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#affix\\"> Affix </a>
      <ul class=\\"mb-anchor-sublist\\">
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#boundary\\">Scroll Boundary</a>
          <!--v-if-->
        </li>
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#hash\\">Hash mode</a>
          <!--v-if-->
        </li>
      </ul>
    </li>
  </ul>
</div>"
`;

exports[`<anchor> demo: render [hash] correctly 1`] = `
"<div class=\\"mb-anchor\\">
  <div class=\\"mb-anchor-line-slider\\"></div>
  <ul class=\\"mb-anchor-list\\">
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#basic\\">Basic</a>
      <!--v-if-->
    </li>
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#line-less\\">LineLess Mode</a>
      <!--v-if-->
    </li>
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#affix\\"> Affix </a>
      <ul class=\\"mb-anchor-sublist\\">
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#boundary\\">Scroll Boundary</a>
          <!--v-if-->
        </li>
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#hash\\">Hash mode</a>
          <!--v-if-->
        </li>
      </ul>
    </li>
  </ul>
</div>"
`;

exports[`<anchor> demo: render [line-less] correctly 1`] = `
"<div class=\\"mb-anchor mb-anchor-line-less\\">
  <!--v-if-->
  <ul class=\\"mb-anchor-list\\">
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#basic\\">Basic</a>
      <!--v-if-->
    </li>
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#line-less\\">LineLess Mode</a>
      <!--v-if-->
    </li>
    <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#affix\\"> Affix </a>
      <ul class=\\"mb-anchor-sublist\\">
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#boundary\\">Scroll Boundary</a>
          <!--v-if-->
        </li>
        <li class=\\"mb-anchor-link-item\\"><a class=\\"mb-anchor-link\\" href=\\"#hash\\">Hash mode</a>
          <!--v-if-->
        </li>
      </ul>
    </li>
  </ul>
</div>"
`;
